# fusion-etl

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  compose.yaml  dagster.yaml  dev.Dockerfile  pyproject.toml  secrets-template.json  setup.cfg  setup.py  workspace.yaml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  requirements.txt
.github/workflows/: deploy.yml
config/: credentials_template.json  demo_erp.json  demo_otbi.json  demo_rdp.json  demo_sharepoint.json  prod_erp.json  prod_rdp.json  prod_sp.json  rdp.json  test_erp.json  test_rdp.json  test_sp.json
dbt_core/: .user.yml  dbt_project.yml  profiles.yml
dbt_core/analyses/: fusion.ipynb  rdp.ipynb
dbt_core/macros/: select_actual_costs.sql
dbt_core/models/: _groups.yml
deployments/: rdp.py  rdp_all.py
flows/: demo_erp.py  demo_rdp.py  prod_rdp.py  rdp_all.py
fusion_etl/: __init__.py
fusion_etl/assets/: cerp.py  cerp_mappings.py  dbt.py  der.py  der_mappings.py  erp.py  erp_mappings.py  mappings.py  msrp.py  msrp_mappings.py  orion.py  orion_mappings.py  rdp.py  sp.py  sp_mappings.py
fusion_etl/jobs/: __init__.py
fusion_etl/ops/: __init__.py
fusion_etl/resources/: azblob.py  azsql.py  azure.py  azure_blob.py  bip.py  der.py  erp.py  finbi.py  fusion.py  msrp.py  pbi.py  rdp.py  sp.py
fusion_etl/schedules/: __init__.py
fusion_etl/sensors/: cerp.py  dbt.py  der.py  erp.py  rdp.py  slack.py
src/fusion_etl/: secrets.py  utils.py
src/fusion_etl/connectors/: erp.py  fusion.py  otbi.py  pbi.py  rdp.py  (+3 more)
tests/: test_erp.py  test_otbi.py  test_sharepoint.py
(+71 files in other folders)
